[package]
name = "arirang"
version = "0.1.0"
edition = "2021"
description = "A library designed to assist with backend development"
license = "MIT"
authors = ["Daniel Choi <choi.mina@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
